--- a/src/locales/fr_FR.json
+++ b/src/locales/fr_FR.json
@@ -145,5 +145,6 @@
     "Borrowable value": "Montant empruntable",
     "Collateral factor tip": "Le facteur de garantie correspond au taux d'emprunt maximum lorsqu'un actif spécifique est utilisé comme garantie. Par exemple, si le facteur de garantie des sKCS est de 80 % et que le prix des sKCS est actuellement de 20 USD, 1 sKCS peut être utilisé comme garantie pour emprunter jusqu'à 16 (0,8 * 20) USD autres actifs sur le marché.",
     "Borrowable value tip": "Montant empruntable = (valeur de la garantie) * (facteur de garantie). Par exemple, si le facteur de garantie des sKCS est de 80 % et que le prix des sKCS est actuellement de 20 USD, 1 sKCS peut être utilisé comme garantie pour emprunter jusqu'à 16 (0,8*20) USD autres actifs sur le marché.",
-    "Displayed APY tip": "L'APY affiché est calculé sur la base de l'APY de dépôt et des gains de récompense."
+    "Displayed APY tip": "L'APY affiché est calculé sur la base de l'APY de dépôt et des gains de récompense.",
+    "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards."
 }
