--- a/src/locales/tr_TR.json
+++ b/src/locales/tr_TR.json
@@ -145,5 +145,6 @@
     "Borrowable value": "Borçlanılabilir Miktar",
     "Collateral factor tip": "Teminat faktörü, belirli bir varlık teminat olarak kullanıldığında maksimum borçlanma oranını temsil eder. Örneğin, sKCS için teminat faktörü %80 ise ve sKCS fiyatı şu anda 20 USD ise, 1 sKCS; piyasadaki diğer varlıklardan 16 (0.8*20) USD'ye kadar borçlanmak için teminat olarak kullanılabilir.",
     "Borrowable value tip": "Borçlanılabilir miktar = (teminat değeri) * (teminat faktörü). Örneğin, sKCS için teminat faktörü %80 ise ve sKCS fiyatı şu anda 20 USD ise, 1 sKCS; piyasadaki diğer varlıklardan 16 (0.8*20) USD'ye kadar borçlanmak için teminat olarak kullanılabilir.",
-    "Displayed APY tip": "Gösterilen APY; yatırma APY'sine ve kazanılan ödüllere dayanmaktadır."
+    "Displayed APY tip": "Gösterilen APY; yatırma APY'sine ve kazanılan ödüllere dayanmaktadır.",
+    "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards."
 }
