--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -147,49 +147,49 @@
     "Borrowable value tip": "Borrowable amount = (collateral value) * (collateral factor). For example, if the collateral factor for sKCS is 80%, and sKCS price is currently 20 USD, then 1 sKCS can be used as collateral to borrow up to 16 (0.8*20) USD of other assets in the market.",
     "Displayed APY tip": "The APY shown is based on the Deposit APY and reward earnings.",
     "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards.",
-    "sKCSWin.Title": "Stake to Earn ${{poolPrize}} in sKCS",
-    "sKCSWin.CutdownTitle": "Current Campaign will End in",
+    "sKCSWin.Title": "Hold an sKCS position to earn a share of ${{poolPrize}} in prizes",
+    "sKCSWin.CutdownTitle": "Current campaign will end in",
     "sKCSWin.D": "D",
     "sKCSWin.H": "H",
     "sKCSWin.M": "M",
     "sKCSWin.S": "S",
-    "sKCSWin.EndButtonText": "This Campaign was End",
+    "sKCSWin.EndButtonText": "This campaign was end",
     "sKCSWin.ParticipateTitle": "How to participate?",
-    "sKCSWin.LeaderBoardTitle": "Staking Leaderboard",
-    "Campaign Rules": "Campaign Rules",
-    "Upcoming Campaign": "Upcoming Campaign",
-    "Past Campaign": "Past Campaign",
-    "sKCSWin.Step1.Desc": "Connect Wallet and register to join this campaign.",
-    "sKCSWin.Step2.Desc": "Stake KCS in the campaign period to accumulate staking amount ranking.",
-    "sKCSWin.Step3.Desc": "Daily snapshot and update TOP 10 ranking on the leaderboard.",
+    "sKCSWin.LeaderBoardTitle": "Leaderboard",
+    "Campaign Rules": "Event Rules",
+    "Upcoming Campaign": "Upcoming Event",
+    "Past Campaign": "Past Event",
+    "sKCSWin.Step1.Desc": "Connect your wallet and click the Register button to participate in the event.",
+    "sKCSWin.Step2.Desc": "sKCS obtained by staking KCS can be included in position calculations for this event.",
+    "sKCSWin.Step3.Desc": "sKCS used to participate in MojitoSwap LP / Torches Deposits / KuSwap LP DeFi products can also be included in position calculations for this event.",
     "Register": "Register",
-    "Registered": "Registered",
+    "Registered": "Already Registered",
     "Use sKCS in DeFi": "Use sKCS in DeFi",
     "KCS Balance": "KCS Balance",
     "sKCS Balance": "sKCS Balance",
-    "sKCSWin.PrizePool.Title": "Prize Pool - ${{poolPrize}}",
-    "TOP 4-23": "TOP 4-23",
-    "TOP 24-123": "TOP 24-123",
+    "sKCSWin.PrizePool.Title": "Total Prize Pool - ${{poolPrize}}",
+    "TOP 4-23": "TOP 4-23(even share of prize)",
+    "TOP 24-123": "TOP 24-123(even share of prize)",
     "YourPrize": "Your Prize:",
-    "Prize Result": "Your Won <gradientText>{{rank}}</gradientText> ,will earn <gradientText>{{rewards}}</gradientText> bonus",
-    "Staking Leaderboard": "Staking Leaderboard",
+    "Prize Result": "Your Won <gradientText>{{rank}}</gradientText> ,will earn <gradientText>{{rewards}}</gradientText> prize",
+    "Staking Leaderboard": "Leaderboard",
     "sKCSWin.UpdateTime": "Update at {{time}} (UTC)",
     "Block Height": "Block Height: {{blockHeight}}",
     "No": "No",
     "Address": "Address",
-    "Daily Staking Amount": "Daily Staking Amount",
+    "Daily Staking Amount": "Daily Average Position",
     "Prize": "Prize",
     "You": "You",
-    "SKCS RULES": "SKCS RULES",
-    "Staking Competition is Underway": "Staking Competition is Underway",
-    "sKCSWin.BannerTitle": "Stake KCS to Share <number>${{prizePool}}</number> in sKCS",
-    "sKCSWin.Rules1": "计算规则：系统每日不定时快照一次sKCS持仓量（包含Wallet/MojitoSwap LP/Torches Deposit），并按日均数量排名。",
-    "sKCSWin.Rules2": "日均持仓数量=（钱包sKCS持有量+Mojito中sKCS LP持有量+Torches存款sKCS持有量）/活动开始至统计时间的自然日天数。",
-    "sKCSWin.Rules3": "排行榜按照日均持仓数量从高到低每日更新排名，若持仓相同导致并列同一名次，下一位用户排名则顺位退后一名。",
-    "sKCSWin.Rules4": "系统每日不定时进行一次快照，建议您长期持有sKCS，取消质押或转移等都可能导致您的排名下降。请确保活动最后一天全天持有，否则将直接取消最终排名。",
-    "sKCSWin.Rules5": "獎勵將於活動結束後審查，並在3個工作日內空投到参赛账户地址中。",
-    "sKCSWin.Rules6": "sKCS.io有权对存在欺诈和造假的行为做出惩罚，取消参赛资格和奖励。",
-    "sKCSWin.Rules7": "其他未列出规则请以sKCS.io官方发布的信息为准。",
+    "SKCS RULES": "Rules：",
+    "Staking Competition is Underway": "The sKCS Positions Contest is in Full Swing",
+    "sKCSWin.BannerTitle": "Hold an sKCS position to earn a share of <number>${{prizePool}}</number> in prizes",
+    "sKCSWin.Rules1": "Calculation Method: The platform will take a snapshot of your sKCS positions (which includes sKCS held in your wallet / MojitoSwap LP / Torches supply / and KuSwap LP) at a random time each day, and will rank participants based on their daily average position value.",
+    "sKCSWin.Rules2": "Daily Average Position Value = (sKCS held in registered wallet + sKCS LP held on MojitoSwap/KuSwap + sKCS in Torches supply) / number of days from start of the event to the time of calculation.",
+    "sKCSWin.Rules3": "Rankings are based on daily average position values, displayed from highest to lowest, and are updated daily. If two participants hold the same daily average position value, the ranking of these participants will be the same, while the next place in the rankings will be pushed one place down.",
+    "sKCSWin.Rules4": "The system takes a snapshot at a random time each day. We recommend holding sKCS for the long term. Redeeming your stake or transferring your sKCS could result in a drop in your ranking. Make sure to hold your positions for the entire day on the last day of the event. Otherwise, your final rankings may be lost.",
+    "sKCSWin.Rules5": "Once the event ends, final calculations will be reviewed, and prizes will be airdropped to participant accounts within 3 business days.",
+    "sKCSWin.Rules6": "sKCS.io reserves the right to penalize falsification or fraudulent behavior by disqualifying participants or withholding prizes.",
+    "sKCSWin.Rules7": "Additional rules not listed here may be announced by sKCS.io through other official channels.",
     "NetworkError": "Network Error",
-    "Register Respond": "报名成功"
+    "Register Respond": "Successfully registered"
 }
