--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -146,5 +146,50 @@
     "Collateral factor tip": "抵押率表示特定資產作為抵押物時的最大借貸比例。例如，如果sKCS的抵押率是80%，當前價格是20美元，那麽1個sKCS可以在借貸市場上最多可借到16美元（0.8*20）的其他資產。",
     "Borrowable value tip": "可借額度=抵押資產的價值*抵押率。\n例如，如果sKCS的抵押率是80%，目前的價格是20美元，那麽1個sKCS可以在市場上借到最多16美元（0.8*20*100）的其他資產。",
     "Displayed APY tip": "顯示的APY是基於當前存款利率及其獎勵收益。",
-    "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards."
+    "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards.",
+    "sKCSWin.Title": "持倉sKCS即可瓜分 ${{poolPrize}} 獎金",
+    "sKCSWin.CutdownTitle": "活動結束倒計時：",
+    "sKCSWin.D": "天",
+    "sKCSWin.H": "時",
+    "sKCSWin.M": "分",
+    "sKCSWin.S": "秒",
+    "sKCSWin.EndButtonText": "此活動已經結束",
+    "sKCSWin.ParticipateTitle": "如何參加活動？",
+    "sKCSWin.LeaderBoardTitle": "排行榜",
+    "Campaign Rules": "活動規則",
+    "Upcoming Campaign": "下期預告",
+    "Past Campaign": "往期活動",
+    "sKCSWin.Step1.Desc": "連接錢包，點擊’立即報名‘按鈕參加活動。",
+    "sKCSWin.Step2.Desc": "質押KCS並且持有sKCS，可計入活動持倉數量中",
+    "sKCSWin.Step3.Desc": "使用sKCS參與MojitoSwap LP/Torches存款/KuSwap LP，可計入活動持倉數量中",
+    "Register": "立即報名",
+    "Registered": "已報名",
+    "Use sKCS in DeFi": "使用sKCS參與DeFi產品",
+    "KCS Balance": "KCS餘額",
+    "sKCS Balance": "sKCS餘額",
+    "sKCSWin.PrizePool.Title": "活動總獎池 - ${{poolPrize}}",
+    "TOP 4-23": "TOP 4-23（平分獎金）",
+    "TOP 24-123": "TOP 24-123（平分獎金）",
+    "YourPrize": "你的獎勵:",
+    "Prize Result": "你當前位列 <gradientText>{{rank}}</gradientText> ,預計可獲得 <gradientText>{{rewards}}</gradientText> 獎金",
+    "Staking Leaderboard": "排行榜",
+    "sKCSWin.UpdateTime": "更新於 {{time}} (UTC時間)",
+    "Block Height": "區塊高度: {{blockHeight}}",
+    "No": "名次",
+    "Address": "地址",
+    "Daily Staking Amount": "日均持倉數量",
+    "Prize": "獎勵",
+    "You": "你的",
+    "SKCS RULES": "規則詳情：",
+    "Staking Competition is Underway": "sKCS持倉競賽正在火熱進行中",
+    "sKCSWin.BannerTitle": "持倉sKCS即可瓜分 <number>${{prizePool}}</number> 獎金",
+    "sKCSWin.Rules1": "計算規則：繫統每日不定時快照一次sKCS持倉量（包含錢包餘額/MojitoSwap LP/Torches Supply/KuSwap LP），按日均持倉數量排名。",
+    "sKCSWin.Rules2": "日均持倉數量=（報名錢包地址的sKCS持有量+MojitoSwap/KuSwap LP中sKCS持有量+Torches存款的sKCS持有量）/ 活動開始至統計時間的自然日天數。",
+    "sKCSWin.Rules3": "排行榜按照日均持倉數量從高到低每日更新排名，若持倉相同導致併列同一名次，下一位用戶的排名則順位退後一名。",
+    "sKCSWin.Rules4": "繫統每日不定時進行一次快照，建議您長期持有sKCS，取消質押或轉移等，都可能直接導致您的排名下降。同時，請確保活動最後一天全天持有，否則將直接取消最終排名。",
+    "sKCSWin.Rules5": "獎勵將於活動結束後審查，預計在3個工作日內空投到參賽賬戶地址中。",
+    "sKCSWin.Rules6": "sKCS.io有權對存在欺詐和造假的行為做出懲罰，取消參賽資格和獎勵。",
+    "sKCSWin.Rules7": "其他未列出規則請以sKCS.io官方發佈的信息為准。",
+    "NetworkError": "網絡錯誤",
+    "Register Respond": "報名成功"
 }
