--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -147,7 +147,7 @@
     "Borrowable value tip": "Borrowable amount = (collateral value) * (collateral factor). For example, if the collateral factor for sKCS is 80%, and sKCS price is currently 20 USD, then 1 sKCS can be used as collateral to borrow up to 16 (0.8*20) USD of other assets in the market.",
     "Displayed APY tip": "The APY shown is based on the Deposit APY and reward earnings.",
     "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards.",
-    "sKCSWin.Title": "Hold an sKCS position to earn a share of ${{poolPrize}} in prizes",
+    "sKCSWin.Title": "Stake KCS to Earn {{poolPrize}} USDT",
     "sKCSWin.CutdownTitle": "Current campaign will end in",
     "sKCSWin.D": "D",
     "sKCSWin.H": "H",
@@ -160,34 +160,35 @@
     "Upcoming Campaign": "Upcoming Event",
     "Past Campaign": "Past Event",
     "sKCSWin.Step1.Desc": "Connect your wallet and click the Register button to participate in the event.",
-    "sKCSWin.Step2.Desc": "sKCS obtained by staking KCS can be included in position calculations for this event.",
-    "sKCSWin.Step3.Desc": "sKCS used to participate in MojitoSwap LP / Torches Deposits / KuSwap LP DeFi products can also be included in position calculations for this event.",
+    "sKCSWin.Step2.Desc": "sKCS obtained by staking KCS can be included in holding calculations for this event.",
+    "sKCSWin.Step3.Desc": "sKCS used to participate in MojitoSwap LP / Torches Deposits / KuSwap LP DeFi products can also be included in holding calculations for this event.",
     "Register": "Register",
     "Registered": "Already Registered",
-    "Use sKCS in DeFi": "Use sKCS in DeFi",
+    "Use sKCS in DeFi": "Explore in DeFi",
     "KCS Balance": "KCS Balance",
     "sKCS Balance": "sKCS Balance",
-    "sKCSWin.PrizePool.Title": "Total Prize Pool - ${{poolPrize}}",
-    "TOP 4-23": "TOP 4-23(even share of prize)",
-    "TOP 24-123": "TOP 24-123(even share of prize)",
+    "sKCSWin.PrizePool.Title": "Total Prize Pool - {{poolPrize}} USDT",
+    "TOP 4-13": "4th - 13rd (even share of prize)",
+    "TOP 14-23": "14th - 23rd (even share of prize)",
+    "TOP 24-123": "24th - 123rd (even share of prize)",
     "YourPrize": "Your Prize:",
-    "Prize Result": "Your Won <gradientText>{{rank}}</gradientText> ,will earn <gradientText>{{rewards}}</gradientText> prize",
+    "Prize Result": "Your Won <gradientText>{{rank}}</gradientText> , will earn <gradientText>{{rewards}}</gradientText> USDT",
     "Staking Leaderboard": "Leaderboard",
     "sKCSWin.UpdateTime": "Update at {{time}} (UTC)",
     "Block Height": "Block Height: {{blockHeight}}",
     "No": "No",
     "Address": "Address",
-    "Daily Staking Amount": "Daily Average Position",
+    "Daily Staking Amount": "Daily Average Holding",
     "Prize": "Prize",
     "You": "You",
     "SKCS RULES": "Rules：",
-    "Staking Competition is Underway": "The sKCS Positions Contest is in Full Swing",
-    "sKCSWin.BannerTitle": "Hold an sKCS position to earn a share of <number>${{prizePool}}</number> in prizes",
-    "sKCSWin.Rules1": "Calculation Method: The platform will take a snapshot of your sKCS positions (which includes sKCS held in your wallet / MojitoSwap LP / Torches supply / and KuSwap LP) at a random time each day, and will rank participants based on their daily average position value.",
-    "sKCSWin.Rules2": "Daily Average Position Value = (sKCS held in registered wallet + sKCS LP held on MojitoSwap/KuSwap + sKCS in Torches supply) / number of days from start of the event to the time of calculation.",
-    "sKCSWin.Rules3": "Rankings are based on daily average position values, displayed from highest to lowest, and are updated daily. If two participants hold the same daily average position value, the ranking of these participants will be the same, while the next place in the rankings will be pushed one place down.",
-    "sKCSWin.Rules4": "The system takes a snapshot at a random time each day. We recommend holding sKCS for the long term. Redeeming your stake or transferring your sKCS could result in a drop in your ranking. Make sure to hold your positions for the entire day on the last day of the event. Otherwise, your final rankings may be lost.",
-    "sKCSWin.Rules5": "Once the event ends, final calculations will be reviewed, and prizes will be airdropped to participant accounts within 3 business days.",
+    "Staking Competition is Underway": "The Staking Contest is in Full Swing",
+    "sKCSWin.BannerTitle": "Stake KCS to Earn <number>{{prizePool}}</number> USDT",
+    "sKCSWin.Rules1": "Calculation Method: The platform will take a snapshot of your sKCS holding (which includes sKCS held in your wallet / MojitoSwap LP / Torches Deposits / and KuSwap LP) at a random time each day, and will rank participants based on their daily average holding value.",
+    "sKCSWin.Rules2": "Daily Average Holding Value = (sKCS held in wallet + sKCS LP held on MojitoSwap/KuSwap + sKCS in Torches deposits) / number of days from start of the event to the time of calculation.",
+    "sKCSWin.Rules3": "The system takes a snapshot at a random time each day. We recommend holding sKCS for the long term. Redeeming your stake or transferring your sKCS could result in a drop in your ranking. Make sure to hold your sKCS for the entire day on the last day of the event. Otherwise, your final ranking may be lost.",
+    "sKCSWin.Rules4": "Rankings are based on daily average holding values, displayed from highest to lowest, and are updated daily. If two participants hold the same daily average holding value, the ranking of these participants will be the same, while the next place in the rankings will be pushed one place down. If the participant's holding is always 0, it will not be displayed in the leaderboard.",
+    "sKCSWin.Rules5": "Once the event ends, final calculations will be reviewed, and prizes will be airdropped to the participant’s address within 3 business days.",
     "sKCSWin.Rules6": "sKCS.io reserves the right to penalize falsification or fraudulent behavior by disqualifying participants or withholding prizes.",
     "sKCSWin.Rules7": "Additional rules not listed here may be announced by sKCS.io through other official channels.",
     "NetworkError": "Network Error",
