--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -172,7 +172,7 @@
     "TOP 14-23": "14th - 23rd (even share of prize)",
     "TOP 24-123": "24th - 123rd (even share of prize)",
     "YourPrize": "Your Prize:",
-    "Prize Result": "Your Won <gradientText>{{rank}}</gradientText> , will earn <gradientText>{{rewards}}</gradientText> USDT",
+    "Prize Result": "You Won <gradientText>{{rank}}</gradientText> , will earn <gradientText>{{rewards}}</gradientText> USDT",
     "Staking Leaderboard": "Leaderboard",
     "sKCSWin.UpdateTime": "Update at {{time}} (UTC)",
     "Block Height": "Block Height: {{blockHeight}}",
@@ -188,7 +188,7 @@
     "sKCSWin.Rules2": "Daily Average Holding Value = (sKCS held in wallet + sKCS LP held on MojitoSwap/KuSwap + sKCS in Torches deposits) / number of days from start of the event to the time of calculation.",
     "sKCSWin.Rules3": "The system takes a snapshot at a random time each day. We recommend holding sKCS for the long term. Redeeming your stake or transferring your sKCS could result in a drop in your ranking. Make sure to hold your sKCS for the entire day on the last day of the event. Otherwise, your final ranking may be lost.",
     "sKCSWin.Rules4": "Rankings are based on daily average holding values, displayed from highest to lowest, and are updated daily. If two participants hold the same daily average holding value, the ranking of these participants will be the same, while the next place in the rankings will be pushed one place down. If the participant's holding is always 0, it will not be displayed in the leaderboard.",
-    "sKCSWin.Rules5": "Once the event ends, final calculations will be reviewed, and prizes will be airdropped to the participant’s address within 3 business days.",
+    "sKCSWin.Rules5": "Once the event ends, final calculations will be reviewed, and prizes will be airdropped to the participant’s address within 7 business days.",
     "sKCSWin.Rules6": "sKCS.io reserves the right to penalize falsification or fraudulent behavior by disqualifying participants or withholding prizes.",
     "sKCSWin.Rules7": "Additional rules not listed here may be announced by sKCS.io through other official channels.",
     "NetworkError": "Network Error",
