--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -192,5 +192,6 @@
     "sKCSWin.Rules6": "sKCS.io有權對存在欺詐和造假的行為做出懲罰，取消參賽資格和獎勵。",
     "sKCSWin.Rules7": "其他未列出規則請以sKCS.io官方渠道發佈的信息為准。",
     "NetworkError": "網絡錯誤",
-    "Register Respond": "報名成功"
+    "Register Respond": "報名成功",
+    "No ranking data available at this time": "目前尚無排名數據。"
 }
