--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -160,8 +160,8 @@
     "Upcoming Campaign": "Upcoming Event",
     "Past Campaign": "Past Event",
     "sKCSWin.Step1.Desc": "Connect your wallet and click the Register button to participate in the event.",
-    "sKCSWin.Step2.Desc": "sKCS obtained by staking KCS can be included in holding calculations for this event.",
-    "sKCSWin.Step3.Desc": "sKCS used to participate in MojitoSwap LP / Torches Deposits / KuSwap LP DeFi products can also be included in holding calculations for this event.",
+    "sKCSWin.Step2.Desc": "Both existing and new sKCS holdings are eligible! (No need to unstake to participate).",
+    "sKCSWin.Step3.Desc": "The sKCS in MojitoSwap LP / Torches Deposits / KuSwap LP that have been held and newly added are also eligible.",
     "Register": "Register",
     "Registered": "Already Registered",
     "Use sKCS in DeFi": "Explore in DeFi",
