--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -160,8 +160,8 @@
     "Upcoming Campaign": "下期預告",
     "Past Campaign": "往期活動",
     "sKCSWin.Step1.Desc": "連接錢包，點擊’立即報名‘按鈕參加活動。",
-    "sKCSWin.Step2.Desc": "質押KCS並且持有sKCS，可計入活動持倉數量中",
-    "sKCSWin.Step3.Desc": "使用sKCS參與MojitoSwap LP/Torches存款/KuSwap LP，可計入活動持倉數量中",
+    "sKCSWin.Step2.Desc": "已持有和新增質押的sKCS，均可計入活動持倉數量中（無需取消質押）。",
+    "sKCSWin.Step3.Desc": "已持有和新增的MojitoSwap LP/Torches存款/KuSwap LP的sKCS，均可計入活動持倉數量中。",
     "Register": "立即報名",
     "Registered": "已報名",
     "Use sKCS in DeFi": "使用sKCS參與DeFi產品",
