--- a/src/locales/fr_FR.json
+++ b/src/locales/fr_FR.json
@@ -146,5 +146,6 @@
     "Collateral factor tip": "Le facteur de garantie correspond au taux d'emprunt maximum lorsqu'un actif spécifique est utilisé comme garantie. Par exemple, si le facteur de garantie des sKCS est de 80 % et que le prix des sKCS est actuellement de 20 USD, 1 sKCS peut être utilisé comme garantie pour emprunter jusqu'à 16 (0,8 * 20) USD autres actifs sur le marché.",
     "Borrowable value tip": "Montant empruntable = (valeur de la garantie) * (facteur de garantie). Par exemple, si le facteur de garantie des sKCS est de 80 % et que le prix des sKCS est actuellement de 20 USD, 1 sKCS peut être utilisé comme garantie pour emprunter jusqu'à 16 (0,8*20) USD autres actifs sur le marché.",
     "Displayed APY tip": "L'APY affiché est calculé sur la base de l'APY de dépôt et des gains de récompense.",
-    "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards."
+    "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards.",
+    "KCSBonusAPY": "Le bonus KCS est un mécanisme d'incitation unique pour les propriétaires de KCS et les bâtisseurs de l'écosystème KuCoin. Ceux qui possèdent au moins 6 KCS peuvent bénéficier d'une récompense quotidienne provenant de 50 % des revenus quotidiens des frais de trading de KuCoin."
 }
