--- a/src/locales/ja_JP.json
+++ b/src/locales/ja_JP.json
@@ -146,5 +146,6 @@
     "Collateral factor tip": "担保係数は、特定の資産を担保とした場合の最大借入比率を表します。例えば、sKCSの担保係数が80%で、sKCSの価格が20ドルの場合、1 sKCSを担保として使用して、市場にある他の資産を最大16(0.8 x 20)ドル借りることができます。",
     "Borrowable value tip": "借入可能額 = (担保価値) x (担保係数)。例えば、sKCSの担保係数が80%で、sKCSの価格が20ドルの場合、1 sKCSを担保として使用して、市場にある他の資産を最大16(0.8 x 20)ドル借りることができます。",
     "Displayed APY tip": "表示されるAPYは、貸出APYと報酬収益に基づいています。",
-    "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards."
+    "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards.",
+    "KCSBonusAPY": "KCSボーナスは、KCS保有者とKuCoinエコシステム構築者向けの独自のインセンティブメカニズムです。6 KCS以上保有すると、KuCoinの毎日の取引手数料収入の50％から毎日配当を受ける資格を得られます。"
 }
