--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -193,5 +193,6 @@
     "sKCSWin.Rules7": "其他未列出規則請以sKCS.io官方渠道發佈的信息為准。",
     "NetworkError": "網絡錯誤",
     "Register Respond": "報名成功",
-    "No ranking data available at this time": "目前尚無排名數據。"
+    "No ranking data available at this time": "目前尚無排名數據。",
+    "KCSBonusAPY": "KCS Bonus代表了KCS持有者和KuCoin生態建設者的獨特激勵機制。持有6 個以上 KCS 的用戶有資格獲得每日獎勵分紅，該獎金來自 KuCoin 每日交易費收入 50% 。"
 }
