--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -194,5 +194,11 @@
     "NetworkError": "網絡錯誤",
     "Register Respond": "報名成功",
     "No ranking data available at this time": "目前尚無排名數據。",
-    "KCSBonusAPY": "KCS Bonus代表了KCS持有者和KuCoin生態建設者的獨特激勵機制。持有6 個以上 KCS 的用戶有資格獲得每日獎勵分紅，該獎金來自 KuCoin 每日交易費收入 50% 。"
+    "KCSBonusAPY": "KCS Bonus代表了KCS持有者和KuCoin生態建設者的獨特激勵機制。持有6 個以上 KCS 的用戶有資格獲得每日獎勵分紅，該獎金來自 KuCoin 每日交易費收入 50% 。",
+    "addition1": "最大化KCS持有者的收益",
+    "addition2": "對比KCS Bonus，sKCS.io不僅收益更佳，而且具備更多優勢。",
+    "addition3": "年化收益",
+    "addition4": "質押代幣",
+    "addition5": "去中心化",
+    "addition6": "最小金額要求"
 }
