--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -194,5 +194,12 @@
     "NetworkError": "Network Error",
     "Register Respond": "Successfully registered",
     "No ranking data available at this time": "No ranking data available at this time.",
-    "KCSBonusAPY": "KCS Bonus is a unique incentive mechanism for KCS holders and KuCoin ecosystem builders. Those who hold at least 6 KCS qualify for a daily reward that comes from 50% of KuCoin's daily trading fee revenue."
+    "KCSBonusAPY": "KCS Bonus is a unique incentive mechanism for KCS holders and KuCoin ecosystem builders. Those who hold at least 6 KCS qualify for a daily reward that comes from 50% of KuCoin's daily trading fee revenue.",
+    "addition1": "Maximizing the Benefits of KCS Holders",
+    "addition2": "Compared with KCS Bonus, sKCS.io offers more profits and advantages.",
+    "addition3": "APR",
+    "addition4": "Staking",
+    "addition5": "Decentralized",
+    "addition6": "Holdings Required",
+    "btcsPYpnxm5oETbqA7NKey": "The DeFi product data shown on this page is provided by third-party platforms.\nOnce you select a DeFi product, you will be taken from the sKCS.io website to a third-party website.\nThe sKCS Agreement and sKCS core development team are not responsible for any actions or content on third-party websites."
 }
