--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -198,7 +198,7 @@
     "addition1": "Maximizing the Benefits of KCS Holders",
     "addition2": "Compared with KCS Bonus, sKCS.io offers more profits and advantages.",
     "addition3": "APR",
-    "addition4": "Staking",
+    "addition4": "Liquid staking token",
     "addition5": "Decentralized",
     "addition6": "Holdings Required",
     "btcsPYpnxm5oETbqA7NKey": "The DeFi product data shown on this page is provided by third-party platforms.\nOnce you select a DeFi product, you will be taken from the sKCS.io website to a third-party website.\nThe sKCS Agreement and sKCS core development team are not responsible for any actions or content on third-party websites."
